# referral-system

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  turbo.json
apps/api/: Dockerfile  README.md  package.json
apps/api/src/: app.ts  index.ts
apps/api/src/config/: constants.ts  database.ts  env.ts  logger.ts
apps/api/src/controllers/: dashboard.controller.ts  matches.controller.ts  (+1 more)
apps/web-consultant/: package.json
docs/architecture/: SYSTEM_DESIGN.md
docs/guides/: DATA_PIPELINE_QUICKSTART.md  DEVELOPER_ONBOARDING.md  PERFORMANCE_TESTING.md
infrastructure/docker/: docker-compose.yml
infrastructure/docker/postgres-init/: 01-create-airflow-db.sql
pipelines/airflow/: .env.airflow  Dockerfile  README.md
pipelines/airflow/dags/: bullhorn_sync_dag.py
pipelines/airflow/scripts/: init-airflow.sh
pipelines/data_platform/loaders/: mappers.py
pipelines/data_platform/ml/: embedding_generator.py
scripts/: wait-for-db.sh
scripts/db/: cleanup-all-data.ts  cleanup-test-data.ts
scripts/monitoring/: check_embeddings.py
scripts/testing/: sync-performance-comparison.ts
services/bullhorn-mock/: Dockerfile  OAUTH_AUTHENTICATION.md  README.md  cleanup-data.sh  cleanup-data.sql  docker-compose.yml  pom.xml  test-oauth.sh
services/etl-service/: README.md  pyproject.toml  setup.py
services/etl-service/src/: __init__.py
services/ml-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
services/ml-service/src/: __init__.py  main.py  matching.py
tests/: README.md
(+143 files in other folders)
